--- a/src/views/maps.html
+++ b/src/views/maps.html
@@ -36,11 +36,11 @@
           <form class="ui form">
             <div class="field">
               <label>Name of Boba Shop</label>
-              <input type="text" name="shop-name" placeholder="enter name here">
+              <input id="shop-name" type="text" name="shop-name" placeholder="enter name here">
             </div>
             <div class="field">
               <label>Address</label>
-              <input type="text" name="shop-address" placeholder="enter address here">
+              <input id="shop-address" type="text" name="shop-address" placeholder="enter address here">
             </div>
             <div class="actions">
               <div class="ui approve button">Submit</div>
@@ -51,7 +51,15 @@
       </div>
 
     </div>
-      
+    <script>
+        var map;
+        function initMap() {
+          map = new google.maps.Map(document.getElementById('map'), {
+            center: {lat: 42.3601, lng: -71.0942},
+            zoom: 14
+          });
+        }
+    </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBb-pivVtwhFSaw2ZXL4nadsUlJdygH3UI&callback=initMap"
     async defer></script>
     <script
@@ -59,6 +67,7 @@
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
         crossorigin="anonymous"></script>
     <script src="../../semantic/semantic.min.js"></script>
+    <script src="../../public/js/api.js"></script>
     <script src="../../public/js/map.js"></script>
   </body>
 </html>
