--- a/src/views/maps.html
+++ b/src/views/maps.html
@@ -25,7 +25,10 @@
   <body>
 
     <div class="ui container" style="height:100%; width:100%; position: relative;">
-
+      <div class= "search bar">
+        <input id="search-content" type="text" placeholder="search">
+        <button id="search-btn"> Search </button>
+      </div>
       <div id="map"></div>
       <button class="circular ui icon button" id="add-btn">
         <i class="icon plus"></i>
