Search bar added to home page, will link to maps page

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -3,6 +3,7 @@
   <head>
     <title> Home Page </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link rel="stylesheet" href = "../../public/css/home.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -11,7 +12,13 @@
         <!-- navbar items are inserted here -->
       </div>
     </nav>
-    <div id = "bigname"> BobaRun </div>
+    <h1 id = "bigname"> BobaRun </h1>
+    <div class= "search-bar">
+      <input id="search-content" type="text" placeholder="search">
+      <button id="search-btn"> Search </button>
+    </div>
   </body>
   <script src="/static/js/navbar.js"></script>
+  <!-- change to static later -->
+  <script src="../../public/js/home.js"></script>
 </html>
