--- a/src/views/maps.html
+++ b/src/views/maps.html
@@ -45,6 +45,10 @@
                         <label>Address</label>
                         <input id="shop-address" type="text" name="shop-address" placeholder="enter address here">
                     </div>
+                    <div class="field">
+                        <label>Zip code</label>
+                        <input id="shop-zip" type="text" name="shop-code" placeholder="enter zip code here">
+                    </div>
                     <div class="actions">
                         <div class="ui approve button">Submit</div>
                         <div class="ui cancel button">Cancel</div>
@@ -54,15 +58,9 @@
         </div>
 
     </div>
-    <script>
-        var map;
-        function initMap() {
-            map = new google.maps.Map(document.getElementById('map'), {
-                center: {lat: 42.3601, lng: -71.0942},
-                zoom: 14
-            });
-        }
-    </script>
+    <script src="/static/js/api.js"></script>
+    <script src="/static/js/index.js"></script>
+
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBb-pivVtwhFSaw2ZXL4nadsUlJdygH3UI&callback=initMap"
             async defer></script>
     <script
@@ -70,7 +68,6 @@
             integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
             crossorigin="anonymous"></script>
     <script src="/static/semantic/semantic.min.js"></script>
-    <script src="/static/js/api.js"></script>
     <script src="/static/js/map.js"></script>
 </body>
 </html>
