--- a/src/views/home.html
+++ b/src/views/home.html
@@ -1,24 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Home Page </title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <title> Boba Run </title>
+    <link rel="stylesheet" type="text/css" href="../../public/semantic/semantic.min.css">
     <link rel="stylesheet" href = "../../public/css/home.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <div class="navbar-brand" href="#">BobaRun</div>
-      <div class="navbar-nav" id="nav-item-container">
-        <!-- navbar items are inserted here -->
+    <div class="ui stackable inverted teal massive menu">
+      <div class = "item">
+        LOGO HERE
       </div>
-    </nav>
+      <div class="header item">
+        BOBA RUN
+      </div>
+      <div class="right menu">
+        <div class="item">
+          <div class="ui icon input">
+            <input type="text" placeholder="Search...">
+            <i class="search link icon"></i>
+          </div>
+        </div>
+        <a class="ui item">
+          Logout
+        </a>
+      </div>
+    </div>
     <h1 id = "bigname"> BobaRun </h1>
     <div class= "search-bar">
       <input id="search-content" type="text" placeholder="search">
       <button id="search-btn"> Search </button>
     </div>
   </body>
-  <script src="/static/js/navbar.js"></script>
-  <!-- change to static later -->
+  <script
+    src="https://code.jquery.com/jquery-3.1.1.min.js"
+    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+    crossorigin="anonymous"></script>
+  <script src="semantic/dist/semantic.min.js"></script>
   <script src="../../public/js/home.js"></script>
 </html>
