--- a/src/views/maps.html
+++ b/src/views/maps.html
@@ -9,7 +9,7 @@
          * element that contains the map. */
         #map {
             height: 100%;
-            width: 50%;
+            width: 100%;
             float: right;
         }
         /* Optional: Makes the sample page fill the window. */
@@ -24,15 +24,28 @@
 </head>
 <body>
 
-    <div class="ui container" style="height:100%; width:100%; position: relative;">
-      <div class= "search-bar">
-        <input id="search-content" type="text" placeholder="search">
-        <button id="search-btn"> Search </button>
-      </div>
-      <div id="map"></div>
-      <button class="circular ui icon button" id="add-btn">
-        <i class="icon plus"></i>
-      </button>
+    <div class="ui grid container" style="height:100%; width:100%; position: relative;">
+        <div class="two column row">
+            <div class="six wide column">
+                <div class= "ui search">
+                    <input id="search-content" type="text" placeholder="search">
+                    <button id="search-btn"> Search </button>
+                  </div>
+                <div id="store-content" class="ui container" style="display:none;">
+                    <p id="name"><strong>Store Name:</strong></p>
+                    <p id="address"><strong>Address:</strong></p>
+                    <p id="rating"><strong>Rating:</strong></p>
+                    <p id="status"><strong>Status:</strong></p>
+                    <p id="drink"><strong>Last Ordered Drink:</strong></p>
+                </div>
+            </div>
+            <div class="ten wide column">
+                <div id="map"></div>
+                <button class="circular ui icon button" id="add-btn">
+                    <i class="icon plus"></i>
+                </button>
+            </div>
+        </div>
 
         <div class="ui small modal">
             <div class="content">
@@ -58,6 +71,7 @@
         </div>
 
     </div>
+
     <script src="/static/js/api.js"></script>
     <script src="/static/js/index.js"></script>
 
