Navbar items added through navbar.js

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -6,23 +6,12 @@
     <link rel="stylesheet" href = "../../public/css/home.css">
   </head>
   <body>
-    <div class="ui stackable inverted teal massive menu">
+    <div class="ui stackable inverted teal massive menu" id = "navbar">
       <div class = "item">
         LOGO HERE
       </div>
       <div class="header item">
         BOBA RUN
-      </div>
-      <div class="right menu">
-        <div class="item">
-          <div class="ui icon input">
-            <input type="text" placeholder="Search...">
-            <i class="search link icon"></i>
-          </div>
-        </div>
-        <a class="ui item">
-          Logout
-        </a>
       </div>
     </div>
     <h1 id = "bigname"> BobaRun </h1>
@@ -35,6 +24,7 @@
     src="https://code.jquery.com/jquery-3.1.1.min.js"
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous"></script>
-  <script src="semantic/dist/semantic.min.js"></script>
+  <script src="../../public/semantic/semantic.min.js"></script>
+  <script src="../../public/js/navbar.js"></script>
   <script src="../../public/js/home.js"></script>
 </html>
