Added About Us html page

--- a/src/views/about.html
+++ b/src/views/about.html
@@ -3,7 +3,7 @@
   <head>
     <title> Boba Run </title>
     <link rel="stylesheet" type="text/css" href="../../public/semantic/semantic.min.css">
-    <link rel="stylesheet" href = "../../public/css/home.css">
+    <link rel="stylesheet" href = "../../public/css/about.css">
   </head>
   <body>
     <div class="ui stackable inverted teal massive menu" id = "navbar">
@@ -14,11 +14,7 @@
         BOBA RUN
       </div>
     </div>
-    <h1 id = "bigname"> BobaRun </h1>
-    <div class= "search-bar">
-      <input id="search-content" type="text" placeholder="search">
-      <button id="search-btn"> Search </button>
-    </div>
+    <h1 id = "bigname"> About Us </h1>
   </body>
   <script
     src="https://code.jquery.com/jquery-3.1.1.min.js"
