Fixed all api endpoints. Added necessary files for each page. Need to work on google authentication giving user

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <title> Boba Run </title>
-    <link rel="stylesheet" type="text/css" href="../../public/semantic/semantic.min.css">
-    <link rel="stylesheet" href = "../../public/css/home.css">
+    <link rel="stylesheet" type="text/css" href="/static/semantic/semantic.min.css">
+    <link rel="stylesheet" href = "/static/css/home.css">
   </head>
   <body>
     <div class="ui stackable inverted teal massive menu" id = "navbar">
       <div class = "item">
         LOGO HERE
       </div>
-      <div class="header item">
+      <div class="header ui item" href='/'>
         BOBA RUN
       </div>
     </div>
@@ -24,7 +24,7 @@
     src="https://code.jquery.com/jquery-3.1.1.min.js"
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous"></script>
-  <script src="../../public/semantic/semantic.min.js"></script>
-  <script src="../../public/js/navbar.js"></script>
-  <script src="../../public/js/home.js"></script>
+  <script src="/static/semantic/semantic.min.js"></script>
+  <script src="/static/js/navbar.js"></script>
+  <script src="/static/js/home.js"></script>
 </html>
