--- a/src/views/add.html
+++ b/src/views/add.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title> Boba Run </title>
-    <link rel="stylesheet" type="text/css" href="../../public/semantic/semantic.min.css">
-    <link rel="stylesheet" href = "../../public/css/home.css">
+    <link rel="stylesheet" type="text/css" href="/static/semantic/semantic.min.css">
+    <link rel="stylesheet" href = "/static/css/add.css">
   </head>
   <body>
     <div class="ui stackable inverted teal massive menu" id = "navbar">
@@ -24,7 +24,7 @@
     src="https://code.jquery.com/jquery-3.1.1.min.js"
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous"></script>
-  <script src="../../public/semantic/semantic.min.js"></script>
-  <script src="../../public/js/navbar.js"></script>
-  <script src="../../public/js/home.js"></script>
+  <script src="/static/semantic/semantic.min.js"></script>
+  <script src="/static/js/navbar.js"></script>
+  <script src="/static/js/add.js"></script>
 </html>
