--- a/src/views/profile.html
+++ b/src/views/profile.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title> Boba Run </title>
-    <link rel="stylesheet" type="text/css" href="../../public/semantic/semantic.min.css">
-    <link rel="stylesheet" href = "../../public/css/home.css">
+    <link rel="stylesheet" type="text/css" href="/static/semantic/semantic.min.css">
+    <link rel="stylesheet" href = "/static/css/profile.css">
   </head>
   <body>
     <div class="ui stackable inverted teal massive menu" id = "navbar">
@@ -14,17 +14,13 @@
         BOBA RUN
       </div>
     </div>
-    <h1 id = "bigname"> BobaRun </h1>
-    <div class= "search-bar">
-      <input id="search-content" type="text" placeholder="search">
-      <button id="search-btn"> Search </button>
-    </div>
+    <h1 id = "bigname"> Profile </h1>
   </body>
   <script
     src="https://code.jquery.com/jquery-3.1.1.min.js"
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous"></script>
-  <script src="../../public/semantic/semantic.min.js"></script>
-  <script src="../../public/js/navbar.js"></script>
-  <script src="../../public/js/home.js"></script>
+  <script src="/static/semantic/semantic.min.js"></script>
+  <script src="/static/js/navbar.js"></script>
+  <script src="/static/js/profile.js"></script>
 </html>
