Fixed navbar for all pages except map

--- a/src/views/add.html
+++ b/src/views/add.html
@@ -6,14 +6,7 @@
     <link rel="stylesheet" href = "/static/css/add.css">
   </head>
   <body>
-    <div class="ui stackable inverted teal massive menu" id = "navbar">
-      <div class = "item">
-        LOGO HERE
-      </div>
-      <div class="header item">
-        BOBA RUN
-      </div>
-    </div>
+    <div class="ui stackable inverted teal massive menu" id = "navbar">    </div>
     <h1 id = "bigname"> BobaRun </h1>
     <div class= "search-bar">
       <input id="search-content" type="text" placeholder="search">
