--- a/src/views/about.html
+++ b/src/views/about.html
@@ -6,14 +6,7 @@
     <link rel="stylesheet" href = "/static/css/about.css">
   </head>
   <body>
-    <div class="ui stackable inverted teal massive menu" id = "navbar">
-      <div class = "item">
-        LOGO HERE
-      </div>
-      <div class="header item">
-        BOBA RUN
-      </div>
-    </div>
+    <div class="ui stackable inverted teal massive menu" id = "navbar"> </div>
     <h1 id = "bigname"> About Us </h1>
   </body>
   <script
