--- a/src/views/maps.html
+++ b/src/views/maps.html
@@ -23,14 +23,7 @@
     <link rel="stylesheet" href="/static/css/maps.css">
 </head>
 <body>
-    <div class="ui stackable inverted teal massive menu" id = "navbar">
-        <div class = "item">
-            LOGO HERE
-        </div>
-        <div class="header ui item" href='/'>
-            BOBA RUN
-        </div>
-    </div>
+    <div class="ui stackable inverted teal massive menu" id = "navbar">    </div>
     <div class="ui grid container" style="height:100%; width:100%; position: relative;">
         <div class="two column row">
             <div class="six wide column">
