Fixed google authentication. Works for all pages now

--- a/src/views/maps.html
+++ b/src/views/maps.html
@@ -73,6 +73,7 @@
     </div>
 
     <script src="/static/js/api.js"></script>
+    <script src="/static/js/navbar.js"></script>
     <script src="/static/js/index.js"></script>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBb-pivVtwhFSaw2ZXL4nadsUlJdygH3UI&callback=initMap"
