--- a/src/views/add.html
+++ b/src/views/add.html
@@ -7,16 +7,13 @@
   </head>
   <body>
     <div class="ui stackable inverted teal massive menu" id = "navbar">    </div>
-    <h1 id = "bigname"> BobaRun </h1>
-    <div class= "search-bar">
-      <input id="search-content" type="text" placeholder="search">
-      <button id="search-btn"> Search </button>
-    </div>
+    <h1 id = "bigname"> Add Store/Event </h1>
   </body>
   <script
     src="https://code.jquery.com/jquery-3.1.1.min.js"
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous"></script>
+  <script src="/static/js/api.js"></script>
   <script src="/static/semantic/semantic.min.js"></script>
   <script src="/static/js/navbar.js"></script>
   <script src="/static/js/add.js"></script>
