--- a/src/views/home.html
+++ b/src/views/home.html
@@ -17,6 +17,7 @@
     src="https://code.jquery.com/jquery-3.1.1.min.js"
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous"></script>
+  <script src="/static/js/api.js"></script>
   <script src="/static/semantic/semantic.min.js"></script>
   <script src="/static/js/navbar.js"></script>
   <script src="/static/js/home.js"></script>
