Changed navbar design and background of pages

--- a/src/views/about.html
+++ b/src/views/about.html
@@ -4,9 +4,10 @@
     <title> Boba Run </title>
     <link rel="stylesheet" type="text/css" href="/static/semantic/semantic.min.css">
     <link rel="stylesheet" href = "/static/css/about.css">
+    <link rel="stylesheet" href = "/static/css/style.css">
   </head>
   <body>
-    <div class="ui stackable inverted teal massive menu" id = "navbar"> </div>
+    <div class="ui stackable inverted menu" id = "navbar"> </div>
     <h1 id = "bigname"> About Us </h1>
   </body>
   <script
