--- a/src/views/home.html
+++ b/src/views/home.html
@@ -4,10 +4,11 @@
     <title> Boba Run </title>
     <link rel="stylesheet" type="text/css" href="/static/semantic/semantic.min.css">
     <link rel="stylesheet" href = "/static/css/home.css">
+    <link rel="stylesheet" href = "/static/css/style.css">
   </head>
   <body>
-    <div class="ui stackable inverted teal massive menu" id = "navbar"> </div>
-    <h1 id = "bigname"> BobaRun </h1>
+    <div class="ui stackable inverted menu" id = "navbar"> </div>
+    <h1 id = "title"> BobaRun </h1>
     <div class= "search-bar">
       <input id="search-content" type="text" placeholder="search">
       <button id="search-btn"> Search </button>
