--- a/src/views/maps.html
+++ b/src/views/maps.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Simple Map</title>
+    <title> Boba Run</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <style>
@@ -21,9 +21,10 @@
     </style>
     <link rel="stylesheet" type="text/css" href="/static/semantic/semantic.min.css">
     <link rel="stylesheet" href="/static/css/maps.css">
+    <link rel="stylesheet" href = "/static/css/style.css">
 </head>
 <body>
-    <div class="ui stackable inverted teal massive menu" id = "navbar">    </div>
+    <div class="ui stackable inverted menu" id = "navbar">    </div>
     <div class="ui grid container" style="height:100%; width:100%; position: relative;">
         <div class="two column row">
             <div class="six wide column">
