--- a/src/views/about.html
+++ b/src/views/about.html
@@ -9,7 +9,8 @@
   <body>
     <div class="ui fixed stackable inverted menu" id = "navbar"> </div>
     <div id="content" class="ui container">
-      <h1 id = "title"> About Us </h1>  
+      <h1 id = "title-head"> About Us </h1> 
+      <p id = "about-text"> This is about us. This is about us. This is about us. This is about us. </p>
     </div>
   </body>
   <script
