--- a/src/views/profile.html
+++ b/src/views/profile.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href = "/static/css/style.css">
   </head>
   <body>
-    <div class="ui stackable inverted menu" id = "navbar">    </div>
-    <h1 id = "bigname"> Profile </h1>
+    <div class="ui fixed stackable inverted menu" id = "navbar">    </div>
+    <div id="content" class="ui container">
+      <h1 id = "title-head"> Profile </h1>
+    </div>
   </body>
   <script
     src="https://code.jquery.com/jquery-3.1.1.min.js"
