--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
 
-#title {
-    text-align:center;
+.ui#content{
+    padding-top: 100px;
+}
+
+#about-text {
     font-family: 'Quicksand', sans-serif;
-    font-size: 50px;
+    font-size: 20px;
     color: #b2765d;
 }
