Some profile and about

--- a/src/views/about.html
+++ b/src/views/about.html
@@ -9,8 +9,13 @@
   <body>
     <div class="ui fixed stackable inverted menu" id = "navbar"> </div>
     <div id="content" class="ui container">
-      <h1 id = "title-head"> About Us </h1> 
-      <p id = "about-text"> This is about us. This is about us. This is about us. This is about us. </p>
+      <h1 id = "title-head"> About Us </h1>
+      <p id = "about-text"> BobaRun is a website for people to explore and enjoy the boba world in a reward seeking game. For you newcomers to boba, not only can you find boba stores, but you can easily see the most popular drinks and never feel at a loss for what to order! For veterans, it's a quest to find new boba locations and share them with the community as well as find and rate the best places while racking up points and raising your status! With BobaRun, join in and enjoy the rising phenomenon of Boba!</p>
+    </div>
+    <div id="contact-us" class="ui container">
+      <h4> Contact Us </h4>
+      <p>Email: dedwards@mit.edu </p>
+      <p>Phone: 123-456-7890 </p>
     </div>
   </body>
   <script
