--- a/src/views/home.html
+++ b/src/views/home.html
@@ -10,7 +10,7 @@
     <div class="ui fixed stackable inverted menu" id = "navbar"> </div>
     <div class="flex-center-vertically">
       <h1 id = "title"> Boba Run </h1>
-      <p id = "description"> This is the section where we describe what this website it is about. </p>
+      <p id = "description"> Boba made easier, simpler, and funner! </p>
       <div class="item" id = "search-item">
         <div class="ui icon input">
           <input class = "search-text" type="text" placeholder="Search for boba...">
@@ -22,7 +22,7 @@
         <button id="search-btn"> Search </button>
       </div>
     </div>
-    
+
   </body>
   <script
     src="https://code.jquery.com/jquery-3.1.1.min.js"
