--- a/src/views/profile.html
+++ b/src/views/profile.html
@@ -11,6 +11,18 @@
     <div id="content" class="ui container">
       <h1 id = "title-head"> Profile </h1>
     </div>
+    <div class="container text-center" id="profile-container">
+      <div class="large-profile-container text-center my-4">
+        <div class="circle-avatar" id="profile-image"></div>
+      </div>
+      <!--<hr> -->
+      <div id="name-container">
+        <!-- name inserted here -->
+      </div>
+      <div id="status">
+        <!-- status and points inserted here -->
+      </div>
+    </div>
   </body>
   <script
     src="https://code.jquery.com/jquery-3.1.1.min.js"
