--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,8 +18,8 @@
   font-size: 40px;
   font-family: 'Impact', sans-serif;
   font-weight: 10px;
-  padding-right: 20px; 
-  padding-left: 20px; 
+  padding-right: 20px;
+  padding-left: 20px;
 }
 
 /* formatting the background */
@@ -42,5 +42,38 @@ body {
 
 /*create variables*/
 :root{
-    --height: 60px; 
+    --height: 60px;
+}
+
+div.circle-avatar{
+	/* make it responsive */
+	max-width: 100%;
+	width:100%;
+	height:auto;
+	display:block;
+	/* div height to be the same as width*/
+	padding-top:100%;
+
+	/* make it a circle */
+	border-radius:50%;
+
+	/* Centering on image`s center*/
+	background-position-y: center;
+	background-position-x: center;
+	background-repeat: no-repeat;
+
+
+	/* it makes the clue thing, takes smaller dimension to fill div */
+	background-size: cover;
+
+	/* it is optional, for making this div centered in parent*/
+	margin: 0 auto;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
+
+.large-profile-container {
+	padding: 0 35%;
 }
