Ugly search bar deleted

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -13,14 +13,11 @@
       <p id = "description"> Boba made easier, simpler, and funner! </p>
       <div class="item" id = "search-item">
         <div class="ui icon input">
-          <input class = "search-text" type="text" placeholder="Search for boba...">
-          <i class="search link icon">  </i>
+          <input class = "search-text" id = "search-content" type="text" placeholder="Search for boba...">
+          <i class="search link icon" id = "search-btn">  </i>
         </div>
       </div>
-      <div class= "search-bar">
-        <input id="search-content" type="text" placeholder="search">
-        <button id="search-btn"> Search </button>
-      </div>
+      
     </div>
 
   </body>
