only logged in users can add to the map

--- a/src/views/maps.html
+++ b/src/views/maps.html
@@ -62,7 +62,7 @@
             </div>
             <div class="ten wide column">
                 <div id="map"></div>
-                <button class="circular ui icon button" id="add-btn">
+                <button class="circular ui icon button" id="add-btn" style="display: none;">
                     <i class="icon plus"></i>
                 </button>
             </div>
