--- a/src/views/maps.html
+++ b/src/views/maps.html
@@ -15,6 +15,7 @@
         /* Optional: Makes the sample page fill the window. */
         html, body {
             height: 100%;
+            width: 100%;
             margin: 0;
             padding: 0;
         }
@@ -30,7 +31,14 @@
     <link rel="stylesheet" href = "/static/css/style.css">
 </head>
 <body>
-    <div class="ui stackable inverted menu" id = "navbar">    </div>
+    <div class="ui fixed stackable inverted menu" id = "navbar">    </div>
+    <div id="map"></div>
+    <button class="circular ui icon button" id="add-btn">
+        <i class="icon plus"></i>
+    </button>
+    <div class="container">
+        
+    </div>
     <div class="ui grid container" style="height:100%; width:100%; position: relative;">
         <div class="two column row">
             <div class="six wide column">
@@ -59,12 +67,6 @@
                         <p id="event-end-disp"><strong>End Date: </strong></p>
                     </div>
                 </div>
-            </div>
-            <div class="ten wide column">
-                <div id="map"></div>
-                <button class="circular ui icon button" id="add-btn">
-                    <i class="icon plus"></i>
-                </button>
             </div>
         </div>
 
