--- a/src/views/maps.html
+++ b/src/views/maps.html
@@ -37,7 +37,7 @@
                 <div class="ui fluid selection search dropdown multiple">
                     <input name="tags" type="hidden">
                     
-                    <div class="default text">Select</div>
+                    <div class="default text">Search nearby stores/events</div>
                     <i class="search icon"></i>
                     <div class="menu" id="results">
                     </div>
