fixed add btn on maps

--- a/src/views/maps.html
+++ b/src/views/maps.html
@@ -33,7 +33,7 @@
 <body>
     <div class="ui fixed stackable inverted menu" id = "navbar">    </div>
     <div id="map"></div>
-    <button class="circular ui icon button" id="add-btn">
+    <button class="circular ui icon button" id="add-btn" style="display: none">
         <i class="icon plus"></i>
     </button>
     <div class="container">
